--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ services :
   - docker
 
 before-install:
-  - docker build -t mithileshcheliyan/docker-react -f Dockerfile.dev
+  - docker build -t mithileshcheliyan/docker-react -f Dockerfile.dev .
 
 script:
   - docker run mithileshcheliyan/docker-react npm run test -- -- coverage
-  
