--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,11 @@ deploy:
 
   on:
     branch: master
-    access_key_id: "$AWS_ACCESS_KEY"
-    secret_access_key: 
-      secure: "$AWS_SECURE_KEY"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_acces_key: $AWS_SECRET_KEY
+
+#secure: "$AWS_SECURE_KEY"
+
+
+#access_key_id: $AWS_ACCESS_KEY
+#secret_acces_key: $AWS_SECRET_KEY
