--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ deploy:
   env:  "Dockerreact-env"
   bucket_name:  "elasticbeanstalk-us-east-2-856054011331"
   bucket_path:  "docker-react"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_acces_key: $AWS_SECRET_KEY
 
   on:
     branch: master
-    access_key_id: "AKIA4OUGLSXB2WCOPXPB"
-    secret_acces_key: "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"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_acces_key: $AWS_SECRET_KEY
 
 #secure: "$AWS_SECURE_KEY"
 
